openturns/1.22/_sources/auto_numerical_methods/general_methods/index.rst.txt


.. _sphx_glr_auto_numerical_methods_general_methods:

.. _General methods:

General methods
---------------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Combinatorial generators">

.. only:: html

  .. image:: /auto_numerical_methods/general_methods/images/thumb/sphx_glr_plot_combinatorial_generator_thumb.png
    :alt:

  :ref:`sphx_glr_auto_numerical_methods_general_methods_plot_combinatorial_generator.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Combinatorial generators</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Random generator parametrization">

.. only:: html

  .. image:: /auto_numerical_methods/general_methods/images/thumb/sphx_glr_plot_random_generator_thumb.png
    :alt:

  :ref:`sphx_glr_auto_numerical_methods_general_methods_plot_random_generator.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Random generator parametrization</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate an integral">

.. only:: html

  .. image:: /auto_numerical_methods/general_methods/images/thumb/sphx_glr_plot_estimate_integral_iterated_quadrature_thumb.png
    :alt:

  :ref:`sphx_glr_auto_numerical_methods_general_methods_plot_estimate_integral_iterated_quadrature.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate an integral</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="There are several possible ways to achieve this:">

.. only:: html

  .. image:: /auto_numerical_methods/general_methods/images/thumb/sphx_glr_plot_study_save_load_thumb.png
    :alt:

  :ref:`sphx_glr_auto_numerical_methods_general_methods_plot_study_save_load.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Save/load a study</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Iterated Functions System">

.. only:: html

  .. image:: /auto_numerical_methods/general_methods/images/thumb/sphx_glr_plot_ifs_thumb.png
    :alt:

  :ref:`sphx_glr_auto_numerical_methods_general_methods_plot_ifs.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Iterated Functions System</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Compute leave-one-out error of a polynomial chaos expansion">

.. only:: html

  .. image:: /auto_numerical_methods/general_methods/images/thumb/sphx_glr_plot_pce_design_thumb.png
    :alt:

  :ref:`sphx_glr_auto_numerical_methods_general_methods_plot_pce_design.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Compute leave-one-out error of a polynomial chaos expansion</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Compute confidence intervals of a regression model from data">

.. only:: html

  .. image:: /auto_numerical_methods/general_methods/images/thumb/sphx_glr_plot_regression_interval_thumb.png
    :alt:

  :ref:`sphx_glr_auto_numerical_methods_general_methods_plot_regression_interval.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Compute confidence intervals of a regression model from data</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Compute confidence intervals of a univariate noisy function">

.. only:: html

  .. image:: /auto_numerical_methods/general_methods/images/thumb/sphx_glr_plot_regression_sinus_thumb.png
    :alt:

  :ref:`sphx_glr_auto_numerical_methods_general_methods_plot_regression_sinus.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Compute confidence intervals of a univariate noisy function</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_numerical_methods/general_methods/plot_combinatorial_generator
   /auto_numerical_methods/general_methods/plot_random_generator
   /auto_numerical_methods/general_methods/plot_estimate_integral_iterated_quadrature
   /auto_numerical_methods/general_methods/plot_study_save_load
   /auto_numerical_methods/general_methods/plot_ifs
   /auto_numerical_methods/general_methods/plot_pce_design
   /auto_numerical_methods/general_methods/plot_regression_interval
   /auto_numerical_methods/general_methods/plot_regression_sinus

